Finished off carousel component, fixed scrollbar and did some finishing touches (text, borders)

--- a/src/components/carousel/carousel.css
+++ b/src/components/carousel/carousel.css
@@ -5,6 +5,7 @@
     padding: 0;
     display: flex;
     z-index: 0;
+    border-bottom: 5px solid rgb(255, 180, 40);
 }
 
 .carousel img {
@@ -13,8 +14,12 @@
 }
 
 .carousel p {
+    text-shadow: 1px 2px 2px rgb(32, 32, 32);
+    font-size: 1.5em;
     text-align: center;
     color: white;
+    width: 50%;
+    line-height: 1.5;
 }
 
 .carouselp1 {
@@ -51,7 +56,7 @@
 }
 
 .overlay {
-    background-color: rgba(0, 0, 0, 0.6);
+    background-color: rgba(0, 0, 0, 0.7);
     display: flex;
     position: absolute;
     justify-content: center;
