--- a/src/routes/home/home.css
+++ b/src/routes/home/home.css
@@ -2,4 +2,5 @@
 	padding: 56px 0px;
 	width: 100%;
 	background-color: white;
+	overflow-x: hidden;
 }
